# jeffrey

./: .gitignore  README.md  pyproject.toml
jeffrey/: __init__.py  cli.py  investigation.py  kubernetes.py  messages.py  models.py  reporter.py  rules.py  scanner.py
tests/: test_investigation.py  test_kubernetes.py  test_ranking.py  test_scanner.py
