[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeffrey"
version = "0.2.0"
description = "A Python CLI that investigates failed CI/CD build logs."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jeffrey contributors" },
]
license = { text = "MIT" }
keywords = ["ci", "cd", "jenkins", "kubernetes", "debugging", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
jeffrey = "jeffrey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jeffrey"]

[tool.hatch.build.targets.sdist]
include = [
    "/jeffrey",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
